// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileLink provides signing out 1`] = `
"<div class=\\"ProfileLink\\"><a class=\\"Link Link_static ProfileWidget-Link\\" href=\\"/profile\\" rel=\\"noopener noreferrer\\">Профиль</a></div>
<div class=\\"ProfileLink-Button\\"><img class=\\"ProfileLink-Icon\\" src=\\"signOutIcon.png\\" alt=\\"Выйти\\"></div>"
`;

exports[`ProfileLink renders stub when no user name 1`] = `
"<div class=\\"ProfileLink\\"><a class=\\"Link Link_static ProfileWidget-Link\\" href=\\"/profile\\" rel=\\"noopener noreferrer\\">Профиль</a></div>
<div class=\\"ProfileLink-Button\\"><img class=\\"ProfileLink-Icon\\" src=\\"signOutIcon.png\\" alt=\\"Выйти\\"></div>"
`;

exports[`ProfileLink renders user name 1`] = `
"<div class=\\"ProfileLink\\"><a class=\\"Link Link_static ProfileWidget-Link\\" href=\\"/profile\\" rel=\\"noopener noreferrer\\">Константин</a></div>
<div class=\\"ProfileLink-Button\\"><img class=\\"ProfileLink-Icon\\" src=\\"signOutIcon.png\\" alt=\\"Выйти\\"></div>"
`;
